tests/baselines/reference/parserES5ComputedPropertyName4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ComputedPropertyName4.ts(1,15): error TS2378: A 'get' accessor must return a value.
parserES5ComputedPropertyName4.ts(1,16): error TS2304: Cannot find name 'e'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ComputedPropertyName4.ts (2 errors) ====
    var v = { get [e]() { } };
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.
                   ~
!!! error TS2304: Cannot find name 'e'.